--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-library-starter-kit",
-  "description": "Angular 5 Library Starter Kit",
+  "name": "ngz-select",
+  "description": "Select for Angular",
   "author": {
-    "name": "Gerard Rovira Sánchez",
-    "email": "zurfyx@gmail.com",
+    "name": "Maks Zhitlov",
+    "email": "maks.zhitlov@gmail.com",
     "url": "zurfyx.com"
   },
   "version": "0.0.0",
